--- a/doc/source/data/examples/ocr_example.ipynb
+++ b/doc/source/data/examples/ocr_example.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "413792c9",
+   "id": "c02b56cf",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e89cb8c7",
+   "id": "4e050aac",
    "metadata": {},
    "source": [
     "# Scaling OCR using Ray Datasets\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "199904be",
+   "id": "f0a6cba8",
    "metadata": {},
    "source": [
     "Let's now import Ray and initialize a local Ray cluster. If you want to run OCR at a very large scale, you should run this workload on a multi-node cluster."
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c3b5178a",
+   "id": "ad867d06",
    "metadata": {
     "scrolled": true
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9efff7c5",
+   "id": "8957d6d2",
    "metadata": {},
    "source": [
     "### Running the OCR software on the data\n",
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c8730951",
+   "id": "5cb9e67a",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,10 @@
     "\n",
     "def perform_ocr(data):\n",
     "    path, img = data\n",
-    "    return {\"path\": path, \"text\": pytesseract.image_to_string(Image.open(BytesIO(img)))}\n",
+    "    return {\n",
+    "        \"path\": path,\n",
+    "        \"text\": pytesseract.image_to_string(Image.open(BytesIO(img)))\n",
+    "    }\n",
     "\n",
     "ds = ray.data.read_binary_files(\"s3://air-example-data/ocr_tiny_dataset\", include_paths=True)\n",
     "\n",
@@ -159,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c052111d",
+   "id": "1382ff9d",
    "metadata": {},
    "source": [
     "Let us have a look at some of the data points with the {meth}`take <ray.data.Dataset.take>` function."
@@ -168,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "756428f2",
+   "id": "4636d513",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caac4b20",
+   "id": "37934081",
    "metadata": {},
    "source": [
     "### Saving and loading the result of the OCR run\n",
@@ -208,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b44a9fbc",
+   "id": "1b8ad9ee",
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "439e4750",
+   "id": "8313ed65",
    "metadata": {},
    "source": [
     "You can later reload the dataset with the {meth}`read_parquet <ray.data.read_parquet>` function:"
@@ -235,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b280be38",
+   "id": "45063911",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1344b68e",
+   "id": "3e683579",
    "metadata": {},
    "source": [
     "### Process the extracted text data with spaCy\n",
@@ -269,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f11fda81",
+   "id": "889ae3a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "587983de",
+   "id": "f176a098",
    "metadata": {},
    "source": [
     "This is some code to determine the language of a piece of text:"
@@ -289,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cb8b105e",
+   "id": "b937fa93",
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c097710",
+   "id": "49ec434b",
    "metadata": {},
    "source": [
     "It gives both the language and a confidence score for that language.\n",
@@ -331,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f7ba1a27",
+   "id": "c02e8caa",
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67ad32e4",
+   "id": "80d6f8ab",
    "metadata": {},
    "source": [
     "We can now get language statistics over the whole dataset:"
@@ -388,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b6350fd1",
+   "id": "7afb2ac7",
    "metadata": {
     "scrolled": true
    },
@@ -420,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e33c16c2",
+   "id": "e5cb1dfe",
    "metadata": {},
    "source": [
     "````{note}\n",
@@ -452,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "618256f4",
+   "id": "1a43c96e",
    "metadata": {},
    "source": [
     "We can now filter to include only the English documents and also sort them according to their score."
@@ -461,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a7012279",
+   "id": "1bb7ab43",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1be83fef",
+   "id": "20b0d721",
    "metadata": {},
    "source": [
     "If you are interested in this example and want to extend it, you can do the following for the full dataset:\n",
