--- a/doc/source/ray-air/examples/lightgbm_example.ipynb
+++ b/doc/source/ray-air/examples/lightgbm_example.ipynb
@@ -72,6 +72,7 @@
    "outputs": [],
    "source": [
     "def prepare_data() -> Tuple[Dataset, Dataset, Dataset]:\n",
+    "    import os\n",
     "    print(os.environ)\n",
     "    dataset = ray.data.read_csv(\"s3://air-example-data/breast_cancer_TYPO.csv\")\n",
     "    train_dataset, valid_dataset = train_test_split(dataset, test_size=0.3)\n",
