--- a/doc/source/tune/examples/bohb_example.ipynb
+++ b/doc/source/tune/examples/bohb_example.ipynb
@@ -71,7 +71,6 @@
     "import ray\n",
     "from ray import tune\n",
     "from ray.air import session\n",
-    "from ray.tune.search import ConcurrencyLimiter\n",
     "from ray.tune.schedulers.hb_bohb import HyperBandForBOHB\n",
     "from ray.tune.search.bohb import TuneBOHB\n",
     "import ConfigSpace as CS"
@@ -215,12 +214,12 @@
    "execution_count": null,
    "id": "dfb3ecad",
    "metadata": {
-    "tags": [
-     "remove-cell"
-    ],
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "tags": [
+     "remove-cell"
+    ]
    },
    "outputs": [],
    "source": [
@@ -295,6 +294,9 @@
    "source": [
     "config_space = CS.ConfigurationSpace()\n",
     "config_space.add_hyperparameter(\n",
+    "    CS.Constant(\"steps\", 100)\n",
+    ")\n",
+    "config_space.add_hyperparameter(\n",
     "    CS.UniformFloatHyperparameter(\"width\", lower=0, upper=20)\n",
     ")\n",
     "config_space.add_hyperparameter(\n",
@@ -316,12 +318,14 @@
    "source": [
     "algo = TuneBOHB(\n",
     "    space=config_space,\n",
-    "    metric=\"episode_reward_mean\",\n",
+    "    metric=\"mean_loss\",\n",
     "    mode=\"max\",\n",
     ")\n",
     "algo = tune.search.ConcurrencyLimiter(algo, max_concurrent=4)\n",
     "scheduler = HyperBandForBOHB(\n",
     "    time_attr=\"training_iteration\",\n",
+    "    metric=\"mean_loss\",\n",
+    "    mode=\"max\",\n",
     "    max_t=100,\n",
     "    reduction_factor=4,\n",
     "    stop_last_trials=False,\n",
@@ -335,16 +339,12 @@
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
-    },
-    "vscode": {
-     "languageId": "python"
     }
    },
    "outputs": [],
    "source": [
     "analysis = tune.run(\n",
     "    objective,\n",
-    "    config=config_space,\n",
     "    scheduler=scheduler,\n",
     "    search_alg=algo,\n",
     "    num_samples=num_samples,\n",
@@ -367,11 +367,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1ae613e4",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(\"Best hyperparameters found were: \", analysis.best_config)"
@@ -394,11 +390,28 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.10 ('venv': venv)",
    "language": "python",
    "name": "python3"
   },
-  "orphan": true
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
+  },
+  "orphan": true,
+  "vscode": {
+   "interpreter": {
+    "hash": "3c0d54d489a08ae47a06eae2fd00ff032d6cddb527c382959b7b2575f6a8167f"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 5
