[Tune/CI] Fix Tune-Pytorch-CIFAR notebook example
Signed-off-by: Antoni Baum <antoni.baum@protonmail.com>

--- a/doc/source/tune/examples/tune-pytorch-cifar.ipynb
+++ b/doc/source/tune/examples/tune-pytorch-cifar.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "55529285",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "01471556",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fff6bd0d",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "fa0bdae0",
    "metadata": {},
    "outputs": [],
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "93b5b4af",
    "metadata": {},
    "outputs": [],
@@ -299,7 +299,7 @@
     "    device = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
     "    best_trained_model.to(device)\n",
     "\n",
-    "    checkpoint_path = os.path.join(best_trial.checkpoint.dir_or_data, \"checkpoint\")\n",
+    "    checkpoint_path = os.path.join(best_trial.checkpoint.dir_or_data, \"checkpoint.pt\")\n",
     "\n",
     "    model_state, optimizer_state = torch.load(checkpoint_path)\n",
     "    best_trained_model.load_state_dict(model_state)\n",
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5416cece",
    "metadata": {},
    "outputs": [],
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "91d83380",
    "metadata": {},
    "outputs": [],
