--- a/doc/source/ray-air/examples/huggingface_text_classification.ipynb
+++ b/doc/source/ray-air/examples/huggingface_text_classification.ipynb
@@ -1412,7 +1412,7 @@
       "execution_count": null,
       "metadata": {
         "id": "2LClXkN8hYbb",
-        "tags": ["remove_cell_ci"]
+        "tags": ["remove-cell-ci"]
       },
       "outputs": [],
       "source": [
@@ -1435,7 +1435,7 @@
       "execution_count": null,
       "metadata": {
         "id": "_wF6aT-0hYbb",
-        "tags": ["remove_cell_ci"]
+        "tags": ["remove-cell-ci"]
       },
       "outputs": [],
       "source": [
@@ -1456,7 +1456,7 @@
       "execution_count": null,
       "metadata": {
         "id": "cjH2A8m6hYbc",
-        "tags": ["remove_cell_ci"]
+        "tags": ["remove-cell-ci"]
       },
       "outputs": [],
       "source": [
@@ -1483,7 +1483,7 @@
       "execution_count": null,
       "metadata": {
         "id": "XSkfJe3nhYbc",
-        "tags": ["remove_cell_ci"]
+        "tags": ["remove-cell-ci"]
       },
       "outputs": [],
       "source": [
@@ -1510,7 +1510,7 @@
       "execution_count": null,
       "metadata": {
         "id": "ipJBReeWhYbc",
-        "tags": ["remove_cell_ci"]
+        "tags": ["remove-cell-ci"]
       },
       "outputs": [],
       "source": []
