--- a/doc/source/tune/examples/bohb_example.ipynb
+++ b/doc/source/tune/examples/bohb_example.ipynb
@@ -316,6 +316,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# As we are passing config space directly to the searcher,\n",
+    "# we need to define metric and mode in it as well, in addition\n",
+    "# to tune.run.\n",
     "algo = TuneBOHB(\n",
     "    space=config_space,\n",
     "    metric=\"mean_loss\",\n",
@@ -324,8 +327,6 @@
     "algo = tune.search.ConcurrencyLimiter(algo, max_concurrent=4)\n",
     "scheduler = HyperBandForBOHB(\n",
     "    time_attr=\"training_iteration\",\n",
-    "    metric=\"mean_loss\",\n",
-    "    mode=\"max\",\n",
     "    max_t=100,\n",
     "    reduction_factor=4,\n",
     "    stop_last_trials=False,\n",
@@ -347,6 +348,8 @@
     "    objective,\n",
     "    scheduler=scheduler,\n",
     "    search_alg=algo,\n",
+    "    metric=\"mean_loss\",\n",
+    "    mode=\"max\",\n",
     "    num_samples=num_samples,\n",
     "    name=\"bohb_exp_2\",\n",
     "    stop={\"training_iteration\": 100},\n",
