--- a/doc/source/tune/examples/tune-sklearn.ipynb
+++ b/doc/source/tune/examples/tune-sklearn.ipynb
@@ -189,12 +189,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "211615e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# n_jobs = -1 enables use of all cores like Tune does\n",
+    "n_jobs = -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3d64c5c",
+   "metadata": {
+    "tags": ["remove-cell"]
+   },
+   "outputs": [],
+   "source": [
+    "# Avoids loky error in CI\n",
+    "n_jobs = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bad624d5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# n_jobs=-1 enables use of all cores like Tune does\n",
-    "sklearn_search = GridSearchCV(SGDClassifier(), parameter_grid, n_jobs=-1)\n",
+    "sklearn_search = GridSearchCV(SGDClassifier(), parameter_grid, n_jobs=n_jobs)\n",
     "\n",
     "start = time.time()\n",
     "sklearn_search.fit(x_train, y_train)\n",
