--- a/doc/source/data/examples/ocr_example.ipynb
+++ b/doc/source/data/examples/ocr_example.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c02b56cf",
+   "id": "7f0fcc72",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e050aac",
+   "id": "05aeed11",
    "metadata": {},
    "source": [
     "# Scaling OCR using Ray Datasets\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0a6cba8",
+   "id": "fcd6b35c",
    "metadata": {},
    "source": [
     "Let's now import Ray and initialize a local Ray cluster. If you want to run OCR at a very large scale, you should run this workload on a multi-node cluster."
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ad867d06",
+   "id": "b3363a9d",
    "metadata": {
     "scrolled": true
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8957d6d2",
+   "id": "99c1c017",
    "metadata": {},
    "source": [
     "### Running the OCR software on the data\n",
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5cb9e67a",
+   "id": "0350ff5a",
    "metadata": {},
    "outputs": [
     {
@@ -148,6 +148,8 @@
     "from PIL import Image\n",
     "import pytesseract\n",
     "\n",
+    "import pyarrow.fs\n",
+    "\n",
     "def perform_ocr(data):\n",
     "    path, img = data\n",
     "    return {\n",
@@ -155,14 +157,17 @@
     "        \"text\": pytesseract.image_to_string(Image.open(BytesIO(img)))\n",
     "    }\n",
     "\n",
-    "ds = ray.data.read_binary_files(\"s3://air-example-data/ocr_tiny_dataset\", include_paths=True)\n",
+    "ds = ray.data.read_binary_files(\n",
+    "    \"s3://air-example-data/ocr_tiny_dataset\",\n",
+    "    include_paths=True,\n",
+    "    filesystem=pyarrow.fs.S3FileSystem(access_key=\"\", secret_key=\"\", session_token=\"\"))\n",
     "\n",
     "results = ds.map(perform_ocr)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1382ff9d",
+   "id": "db2005f7",
    "metadata": {},
    "source": [
     "Let us have a look at some of the data points with the {meth}`take <ray.data.Dataset.take>` function."
@@ -171,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4636d513",
+   "id": "d65c4463",
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37934081",
+   "id": "13a1e1e4",
    "metadata": {},
    "source": [
     "### Saving and loading the result of the OCR run\n",
@@ -211,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1b8ad9ee",
+   "id": "1ec828b4",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8313ed65",
+   "id": "a41f59cd",
    "metadata": {},
    "source": [
     "You can later reload the dataset with the {meth}`read_parquet <ray.data.read_parquet>` function:"
@@ -238,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "45063911",
+   "id": "27726cbc",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e683579",
+   "id": "ba17c529",
    "metadata": {},
    "source": [
     "### Process the extracted text data with spaCy\n",
@@ -272,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "889ae3a2",
+   "id": "860e2a08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f176a098",
+   "id": "1adfec4f",
    "metadata": {},
    "source": [
     "This is some code to determine the language of a piece of text:"
@@ -292,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b937fa93",
+   "id": "535b142b",
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49ec434b",
+   "id": "9d1ffd76",
    "metadata": {},
    "source": [
     "It gives both the language and a confidence score for that language.\n",
@@ -334,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c02e8caa",
+   "id": "2aaa75e5",
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80d6f8ab",
+   "id": "1b2033c2",
    "metadata": {},
    "source": [
     "We can now get language statistics over the whole dataset:"
@@ -391,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7afb2ac7",
+   "id": "e76bfe4b",
    "metadata": {
     "scrolled": true
    },
@@ -423,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5cb1dfe",
+   "id": "c589c210",
    "metadata": {},
    "source": [
     "````{note}\n",
@@ -455,7 +460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a43c96e",
+   "id": "d9702315",
    "metadata": {},
    "source": [
     "We can now filter to include only the English documents and also sort them according to their score."
@@ -464,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1bb7ab43",
+   "id": "b1e9950e",
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20b0d721",
+   "id": "0087474d",
    "metadata": {},
    "source": [
     "If you are interested in this example and want to extend it, you can do the following for the full dataset:\n",
