--- a/doc/source/data/examples/ocr_example.ipynb
+++ b/doc/source/data/examples/ocr_example.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7f0fcc72",
+   "id": "de79ddce",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05aeed11",
+   "id": "1caf65a1",
    "metadata": {},
    "source": [
     "# Scaling OCR using Ray Datasets\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcd6b35c",
+   "id": "97bffa8e",
    "metadata": {},
    "source": [
     "Let's now import Ray and initialize a local Ray cluster. If you want to run OCR at a very large scale, you should run this workload on a multi-node cluster."
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b3363a9d",
+   "id": "9d9efa41",
    "metadata": {
     "scrolled": true
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99c1c017",
+   "id": "f2672860",
    "metadata": {},
    "source": [
     "### Running the OCR software on the data\n",
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0350ff5a",
+   "id": "a2de9127",
    "metadata": {},
    "outputs": [
     {
@@ -160,14 +160,14 @@
     "ds = ray.data.read_binary_files(\n",
     "    \"s3://air-example-data/ocr_tiny_dataset\",\n",
     "    include_paths=True,\n",
-    "    filesystem=pyarrow.fs.S3FileSystem(access_key=\"\", secret_key=\"\", session_token=\"\"))\n",
+    "    filesystem=pyarrow.fs.S3FileSystem(anonymous=True))\n",
     "\n",
     "results = ds.map(perform_ocr)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "db2005f7",
+   "id": "12578ae1",
    "metadata": {},
    "source": [
     "Let us have a look at some of the data points with the {meth}`take <ray.data.Dataset.take>` function."
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d65c4463",
+   "id": "4baa794c",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13a1e1e4",
+   "id": "b6f307bd",
    "metadata": {},
    "source": [
     "### Saving and loading the result of the OCR run\n",
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1ec828b4",
+   "id": "b68ff9b7",
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a41f59cd",
+   "id": "77ace86c",
    "metadata": {},
    "source": [
     "You can later reload the dataset with the {meth}`read_parquet <ray.data.read_parquet>` function:"
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "27726cbc",
+   "id": "589fe450",
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba17c529",
+   "id": "470b4c11",
    "metadata": {},
    "source": [
     "### Process the extracted text data with spaCy\n",
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "860e2a08",
+   "id": "5233741a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1adfec4f",
+   "id": "4733b5d6",
    "metadata": {},
    "source": [
     "This is some code to determine the language of a piece of text:"
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "535b142b",
+   "id": "e1ce2615",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d1ffd76",
+   "id": "38a3b40e",
    "metadata": {},
    "source": [
     "It gives both the language and a confidence score for that language.\n",
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2aaa75e5",
+   "id": "986bb937",
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b2033c2",
+   "id": "ccab3382",
    "metadata": {},
    "source": [
     "We can now get language statistics over the whole dataset:"
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e76bfe4b",
+   "id": "54ef6e4c",
    "metadata": {
     "scrolled": true
    },
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c589c210",
+   "id": "8103ab73",
    "metadata": {},
    "source": [
     "````{note}\n",
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9702315",
+   "id": "6214e021",
    "metadata": {},
    "source": [
     "We can now filter to include only the English documents and also sort them according to their score."
@@ -469,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b1e9950e",
+   "id": "0403b1bb",
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0087474d",
+   "id": "eaeae901",
    "metadata": {},
    "source": [
     "If you are interested in this example and want to extend it, you can do the following for the full dataset:\n",
