--- a/doc/source/ray-air/examples/torch_image_example.ipynb
+++ b/doc/source/ray-air/examples/torch_image_example.ipynb
@@ -472,7 +472,7 @@
     ")\n",
     "\n",
     "outputs: ray.data.Dataset = batch_predictor.predict(\n",
-    "    data=test_dataset, feature_columns=[\"image\"], unsqueeze=False\n",
+    "    data=test_dataset, feature_columns=[\"image\"], keep_columns=[\"label\"]\n",
     ")"
    ]
   },
@@ -505,7 +505,7 @@
     "def convert_logits_to_classes(df):\n",
     "    best_class = df[\"predictions\"].map(lambda x: x.argmax())\n",
     "    df[\"prediction\"] = best_class\n",
-    "    return df[[\"prediction\"]]\n",
+    "    return df\n",
     "\n",
     "predictions = outputs.map_batches(\n",
     "    convert_logits_to_classes, batch_format=\"pandas\"\n",
@@ -545,7 +545,7 @@
     "    df[\"correct\"] = df[\"prediction\"] == df[\"label\"]\n",
     "    return df[[\"prediction\", \"label\", \"correct\"]]\n",
     "\n",
-    "scores = test_dataset.zip(predictions).map_batches(calculate_prediction_scores)\n",
+    "scores = predictions.map_batches(calculate_prediction_scores)\n",
     "\n",
     "scores.show(1)"
    ]
@@ -715,7 +715,7 @@
    "hash": "63e5f6eec01b85d783aa3a898bfbc5e143aba32dbede6a46dbb3b17d5dbd2e6a"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.12 ('.venv': venv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -729,7 +729,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
