--- a/doc/source/data/examples/ocr_example.ipynb
+++ b/doc/source/data/examples/ocr_example.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "de79ddce",
+   "id": "bb11f5ce",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1caf65a1",
+   "id": "ba4a1b04",
    "metadata": {},
    "source": [
     "# Scaling OCR using Ray Datasets\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97bffa8e",
+   "id": "22d716b1",
    "metadata": {},
    "source": [
     "Let's now import Ray and initialize a local Ray cluster. If you want to run OCR at a very large scale, you should run this workload on a multi-node cluster."
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9d9efa41",
+   "id": "cf4456a3",
    "metadata": {
     "scrolled": true
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2672860",
+   "id": "20d5e295",
    "metadata": {},
    "source": [
     "### Running the OCR software on the data\n",
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a2de9127",
+   "id": "dea6f165",
    "metadata": {},
    "outputs": [
     {
@@ -159,15 +159,14 @@
     "\n",
     "ds = ray.data.read_binary_files(\n",
     "    \"s3://air-example-data/ocr_tiny_dataset\",\n",
-    "    include_paths=True,\n",
-    "    filesystem=pyarrow.fs.S3FileSystem(anonymous=True))\n",
+    "    include_paths=True)\n",
     "\n",
     "results = ds.map(perform_ocr)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "12578ae1",
+   "id": "21fcb31f",
    "metadata": {},
    "source": [
     "Let us have a look at some of the data points with the {meth}`take <ray.data.Dataset.take>` function."
@@ -176,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4baa794c",
+   "id": "a7834d77",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6f307bd",
+   "id": "81bef48b",
    "metadata": {},
    "source": [
     "### Saving and loading the result of the OCR run\n",
@@ -216,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b68ff9b7",
+   "id": "d7fb1f53",
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77ace86c",
+   "id": "7f6b0b0d",
    "metadata": {},
    "source": [
     "You can later reload the dataset with the {meth}`read_parquet <ray.data.read_parquet>` function:"
@@ -243,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "589fe450",
+   "id": "b4ed42c8",
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "470b4c11",
+   "id": "3fb1bb40",
    "metadata": {},
    "source": [
     "### Process the extracted text data with spaCy\n",
@@ -277,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5233741a",
+   "id": "1cfb8eab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4733b5d6",
+   "id": "17c0cf17",
    "metadata": {},
    "source": [
     "This is some code to determine the language of a piece of text:"
@@ -297,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e1ce2615",
+   "id": "0795905d",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38a3b40e",
+   "id": "78854ade",
    "metadata": {},
    "source": [
     "It gives both the language and a confidence score for that language.\n",
@@ -339,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "986bb937",
+   "id": "b15ff658",
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccab3382",
+   "id": "cdc4c7b5",
    "metadata": {},
    "source": [
     "We can now get language statistics over the whole dataset:"
@@ -396,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "54ef6e4c",
+   "id": "913a29c8",
    "metadata": {
     "scrolled": true
    },
@@ -428,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8103ab73",
+   "id": "89617adf",
    "metadata": {},
    "source": [
     "````{note}\n",
@@ -460,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6214e021",
+   "id": "c0619744",
    "metadata": {},
    "source": [
     "We can now filter to include only the English documents and also sort them according to their score."
@@ -469,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0403b1bb",
+   "id": "7186ea15",
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaeae901",
+   "id": "ea30f05e",
    "metadata": {},
    "source": [
     "If you are interested in this example and want to extend it, you can do the following for the full dataset:\n",
