--- a/doc/source/ray-air/examples/torch_incremental_learning.ipynb
+++ b/doc/source/ray-air/examples/torch_incremental_learning.ipynb
@@ -676,7 +676,9 @@
     "\n",
     "In addition to batch inference, we also want to deploy our model so that we can submit live queries to it for online inference. We use Ray Serve's `PredictorDeployment` utility to deploy our trained model. \n",
     "\n",
-    "Once we deploy the model, we can send HTTP requests to our deployment."
+    "Once we deploy the model, we can send HTTP requests to our deployment.\n",
+    "\n",
+    "We specify a `user_config` in our deployment to update it with the latest checkpoint without needing to teardown and restart the deployment. More information can be found [here](https://docs.ray.io/en/latest/serve/core-apis.html#user-configuration-experimental)"
    ]
   },
   {
@@ -705,7 +707,8 @@
     "      df = pd.DataFrame({\"image\": [arr]})\n",
     "      return df\n",
     "\n",
-    "  deployment = PredictorDeployment.options(name=\"mnist_model\", route_prefix=\"/mnist_predict\", version=f\"v{task_idx}\", num_replicas=2)\n",
+    "  deployment_config = {\"checkpoint\": latest_checkpoint}\n",
+    "  deployment = PredictorDeployment.options(name=\"mnist_model\", user_config=deployment_config, route_prefix=\"/mnist_predict\", version=f\"v{task_idx}\", num_replicas=2)\n",
     "  deployment.deploy(batching_params=False, http_adapter=json_to_pandas, predictor_cls=TorchPredictor, checkpoint=latest_checkpoint, model=SimpleMLP(num_classes=10))\n",
     "  return deployment.url\n",
     "\n",
@@ -1320,10 +1323,7 @@
     "\n",
     "  if ray.available_resources().get(\"CPU\", 0) < num_workers+1:\n",
     "    # If there are no more CPUs left, then shutdown the Serve replicas so we can continue training on the next task.\n",
-    "    serve.shutdown()\n",
-    "\n",
-    "  \n",
-    "serve.shutdown()"
+    "    serve.shutdown()"
    ]
   },
   {
