--- a/doc/source/ray-air/examples/torch_image_example.ipynb
+++ b/doc/source/ray-air/examples/torch_image_example.ipynb
@@ -435,11 +435,7 @@
     ")\n",
     "\n",
     "outputs: ray.data.Dataset = batch_predictor.predict(\n",
-<<<<<<< HEAD
-    "    data=test_dataset, feature_columns=[\"image\"], keep_columns=[\"label\"]\n",
-=======
-    "    data=predict_dataset, dtype=torch.float\n",
->>>>>>> f2401a14d96dbbd433f2e4185a0a6727de9956f1
+    "    data=test_dataset, dtype=torch.float, feature_columns=[\"image\"], keep_columns=[\"label\"]\n",
     ")"
    ]
   },
@@ -712,11 +708,7 @@
  ],
  "metadata": {
   "kernelspec": {
-<<<<<<< HEAD
-   "display_name": "Python 3 (ipykernel)",
-=======
    "display_name": "Python 3.6.13 ('ray')",
->>>>>>> f2401a14d96dbbd433f2e4185a0a6727de9956f1
    "language": "python",
    "name": "python3"
   },
@@ -730,16 +722,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-<<<<<<< HEAD
-   "version": "3.8.6"
-=======
    "version": "3.6.13"
   },
   "vscode": {
    "interpreter": {
     "hash": "270f2d85f4357bdfaf8bd07e0bf53472a3d1c8c66509b0720fe6bb0939d92e56"
    }
->>>>>>> f2401a14d96dbbd433f2e4185a0a6727de9956f1
   }
  },
  "nbformat": 4,
