--- a/doc/source/data/examples/ocr_example.ipynb
+++ b/doc/source/data/examples/ocr_example.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bb11f5ce",
+   "id": "905f9cad",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba4a1b04",
+   "id": "6945c179",
    "metadata": {},
    "source": [
     "# Scaling OCR using Ray Datasets\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22d716b1",
+   "id": "c08612ac",
    "metadata": {},
    "source": [
     "Let's now import Ray and initialize a local Ray cluster. If you want to run OCR at a very large scale, you should run this workload on a multi-node cluster."
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cf4456a3",
+   "id": "37f22aa8",
    "metadata": {
     "scrolled": true
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20d5e295",
+   "id": "ee90daa8",
    "metadata": {},
    "source": [
     "### Running the OCR software on the data\n",
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "dea6f165",
+   "id": "d31d3303",
    "metadata": {},
    "outputs": [
     {
@@ -148,8 +148,6 @@
     "from PIL import Image\n",
     "import pytesseract\n",
     "\n",
-    "import pyarrow.fs\n",
-    "\n",
     "def perform_ocr(data):\n",
     "    path, img = data\n",
     "    return {\n",
@@ -158,7 +156,7 @@
     "    }\n",
     "\n",
     "ds = ray.data.read_binary_files(\n",
-    "    \"s3://air-example-data/ocr_tiny_dataset\",\n",
+    "    \"s3://anonymous@air-example-data/ocr_tiny_dataset\",\n",
     "    include_paths=True)\n",
     "\n",
     "results = ds.map(perform_ocr)"
@@ -166,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21fcb31f",
+   "id": "e22e7cd7",
    "metadata": {},
    "source": [
     "Let us have a look at some of the data points with the {meth}`take <ray.data.Dataset.take>` function."
@@ -175,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a7834d77",
+   "id": "5518b831",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81bef48b",
+   "id": "67ed5a8d",
    "metadata": {},
    "source": [
     "### Saving and loading the result of the OCR run\n",
@@ -215,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d7fb1f53",
+   "id": "7c2d8abe",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f6b0b0d",
+   "id": "7a387f42",
    "metadata": {},
    "source": [
     "You can later reload the dataset with the {meth}`read_parquet <ray.data.read_parquet>` function:"
@@ -242,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b4ed42c8",
+   "id": "af63be93",
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fb1bb40",
+   "id": "f6a7bf0f",
    "metadata": {},
    "source": [
     "### Process the extracted text data with spaCy\n",
@@ -276,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cfb8eab",
+   "id": "69321ee3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17c0cf17",
+   "id": "b01d2add",
    "metadata": {},
    "source": [
     "This is some code to determine the language of a piece of text:"
@@ -296,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0795905d",
+   "id": "ee4cc430",
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78854ade",
+   "id": "95ab0646",
    "metadata": {},
    "source": [
     "It gives both the language and a confidence score for that language.\n",
@@ -338,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b15ff658",
+   "id": "85a4a414",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdc4c7b5",
+   "id": "ca995036",
    "metadata": {},
    "source": [
     "We can now get language statistics over the whole dataset:"
@@ -395,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "913a29c8",
+   "id": "f64f8b3c",
    "metadata": {
     "scrolled": true
    },
@@ -427,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89617adf",
+   "id": "0d638758",
    "metadata": {},
    "source": [
     "````{note}\n",
@@ -459,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0619744",
+   "id": "9cc5ca11",
    "metadata": {},
    "source": [
     "We can now filter to include only the English documents and also sort them according to their score."
@@ -468,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7186ea15",
+   "id": "8c4bd03d",
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea30f05e",
+   "id": "8c05df96",
    "metadata": {},
    "source": [
     "If you are interested in this example and want to extend it, you can do the following for the full dataset:\n",
