--- a/doc/source/ray-air/examples/convert_existing_pytorch_code_to_ray_air.ipynb
+++ b/doc/source/ray-air/examples/convert_existing_pytorch_code_to_ray_air.ipynb
@@ -859,9 +859,7 @@
     "    for t in range(epochs):\n",
     "        train_epoch(train_dataloader, model, loss_fn, optimizer)\n",
     "        test_loss = test_epoch(test_dataloader, model, loss_fn)\n",
-    "        checkpoint = Checkpoint.from_dict(\n",
-    "            dict(epoch=t, model=model.module.state_dict())\n",
-    "        )\n",
+    "        checkpoint = TorchCheckpoint.from_model(model, epoch=t)\n",
     "        session.report(dict(loss=test_loss), checkpoint=checkpoint)\n",
     "\n",
     "    print(\"Done!\")"
@@ -979,9 +977,9 @@
     }
    ],
    "source": [
-    "from ray.train.torch import load_checkpoint\n",
+    "from ray.train.torch import TorchCheckpoint\n",
     "\n",
-    "model, _ = load_checkpoint(result.checkpoint, NeuralNetwork())\n",
+    "model = result.checkpoint.get_model()\n",
     "\n",
     "predict_from_model(model)"
    ]
@@ -1316,8 +1314,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "63e5f6eec01b85d783aa3a898bfbc5e143aba32dbede6a46dbb3b17d5dbd2e6a"
+  },
   "kernelspec": {
-   "display_name": "Python 3.6.13 ('ray')",
+   "display_name": "Python 3.8.12 ('.venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -1331,7 +1332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.12"
   },
   "vscode": {
    "interpreter": {
