--- a/doc/source/ray-air/examples/huggingface_text_classification.ipynb
+++ b/doc/source/ray-air/examples/huggingface_text_classification.ipynb
@@ -151,7 +151,7 @@
       },
       "outputs": [],
       "source": [
-        "use_gpu = True  # set this to False to run on CPUs\n",
+        "use_gpu = False  # set this to False to run on CPUs\n",
         "num_workers = 1  # set this to number of GPUs/CPUs you want to use"
       ]
     },
