--- a/doc/source/ray-air/examples/convert_existing_pytorch_code_to_ray_air.ipynb
+++ b/doc/source/ray-air/examples/convert_existing_pytorch_code_to_ray_air.ipynb
@@ -982,7 +982,7 @@
    "source": [
     "from ray.train.torch import TorchCheckpoint\n",
     "\n",
-    "model = TorchCheckpoint.copy_from(result.checkpoint).get_model(NeuralNetwork())\n",
+    "model = TorchCheckpoint.from_checkpoint(result.checkpoint).get_model(NeuralNetwork())\n",
     "\n",
     "predict_from_model(model)"
    ]
