--- a/doc/source/ray-air/examples/huggingface_text_classification.ipynb
+++ b/doc/source/ray-air/examples/huggingface_text_classification.ipynb
@@ -1468,7 +1468,7 @@
       "source": [
         "from ray.train.huggingface import HuggingFaceCheckpoint\n",
         "\n",
-        "checkpoint = HuggingFaceCheckpoint.copy_from(result.checkpoint)\n",
+        "checkpoint = HuggingFaceCheckpoint.from_checkpoint(result.checkpoint)\n",
         "hf_trainer = checkpoint.get_model(model=AutoModelForSequenceClassification)"
       ]
     },
