--- a/doc/source/ray-air/examples/torch_incremental_learning.ipynb
+++ b/doc/source/ray-air/examples/torch_incremental_learning.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "id": "3TVkSmFFCHhI"
    },
@@ -253,12 +253,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {
     "id": "0XKwJKrNCxg4"
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
     "import torchvision\n",
@@ -506,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {
     "id": "yHzQZTlAlY-9"
    },
@@ -524,7 +525,8 @@
     "      [transforms.ToTensor(), transforms.Normalize((0.1307,), (0.3081,))]\n",
     "    )\n",
     "\n",
-    "    df[\"image\"] = TensorArray([torchvision_transforms(image) for image in df[\"image\"]])\n",
+    "    processed = df[\"image\"].map(torchvision_transforms)\n",
+    "    df[\"image\"] = TensorArray(processed)\n",
     "    return df\n",
     "\n",
     "mnist_normalize_preprocessor = BatchMapper(fn=preprocess_images)"
